--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 <head>
 <title>Me</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="icon" href="images/icon.jpg">
 </head>
     <body>
         {{ content }}
