--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ p.ex1 {
     padding-left:20px;
 }
 
+img.ex2 {
+    padding-right:30px;
+}
+
 .tab {
     overflow: hidden;
     border: 1px solid #ccc;
