--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial; 
+    font-family: Arial, Helvetica, sans-serif; 
     background-color: #333333;
     padding-top:5px; 
     padding-bottom:55px; 
@@ -11,7 +11,7 @@ body {
 
 .text
 { 
-    font-family: 'Arial';
+    font-family: Arial, Helvetica, sans-serif; 
     margin-left:auto; 
     margin-right:auto; 
     width:970px;
@@ -44,7 +44,7 @@ p.ex1 {
 }
 
 img.ex2 {
-    padding-right:15px;
+    padding-right:25px;
 }
 
 .tab {
