Change tab bar message

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <meta name="author" content="Alex Hankin, alex hankin, Alexander Hankin, Alex, Hankin, Alexander Hankin, Alexander R. Hankin">
 
 <head>
-<title>Me</title>
+<title>Alex Hankin's Personal Page</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="icon" href="images/icon.jpg">
 </head>
