--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 <meta name="author" content="Alex Hankin, alex hankin, Alexander Hankin, Alex, Hankin, Alexander Hankin, Alexander R. Hankin">
 
 <head>
-<title>Alex Hankin's Personal Page</title>
+<title>Alex Hankin</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<link rel="icon" href="images/icon.jpg">
+<link rel="icon" href="">
 </head>
     <body>
         {{ content }}
