--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif; 
-    background-color: #C6C6C6;
+    background-color: #ffffff;
     padding-top:5px; 
     padding-bottom:500px; 
     padding-left:20px; 
