--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@ body {
     font-family: Arial, Helvetica, sans-serif; 
     margin-left:auto; 
     margin-right:auto; 
-    width:970px;
+    width:700px;
     background-color:#ffffff;
 }
 
 #wrap { 
-    width: 970px; 
+    width: 700px; 
     margin: 0 auto; 
 }
 
@@ -49,8 +49,7 @@ img.ex2 {
 
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color: #ffffff;
     margin-left:auto;
 }
 
