--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif; 
     background-color: #ffffff;
+    width: 700px;
     padding-top:5px; 
     padding-bottom:500px; 
     padding-left:30px; 
